--- a/package.json
+++ b/package.json
@@ -1,59 +1,32 @@
 {
   "name": "flickr-sdk",
-  "version": "2.0.1",
-  "description": "The easiest way to talk to the Flickr API with node.js or a web browser",
+  "version": "3.0.0",
+  "description": "Almost certainly the best Flickr API client in the world for node and the browser",
   "keywords": [
-    "api",
     "flickr",
-    "photos",
+    "api",
     "sdk",
-    "interface"
+    "photos",
+    "search"
   ],
-  "main": "flickr-sdk.js",
-  "browser": {
-    "flickr-js-sdk": "./build/flickr-js-sdk.min.js"
-  },
+  "main": "index.js",
   "scripts": {
-    "test": "./script/test.sh",
-    "lint": "gulp jshint",
-    "jscs": "gulp jscs",
-    "coverage": "./script/coverage.sh",
-    "build": "./script/build.sh",
-    "build-tests": "./script/build-tests.sh"
+    "test": "echo OHAI"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:flickr/flickr-sdk.git"
+    "url": "git+ssh://git@github.com/flickr/flickr-sdk.git"
   },
-  "author": "Jim Whimpey <whimpey@flickr.com>",
+  "author": [
+    "Jeremy Ruppel <ruppel@yahoo-inc.com>",
+    "Alex Seville <seville@yahoo-inc.com>",
+    "Phil Dokas <pdokas@yahoo-inc.com>"
+  ],
   "license": "MIT",
-  "devDependencies": {
-    "async": "1.2.1",
-    "browserify": "~11.1.0",
-    "coveralls": "^2.11.9",
-    "istanbul": "^0.4.2",
-    "mocha": "2.4.5",
-    "clone": "^1.0.2",
-    "express": "^4.13.4",
-    "gulp": "~3.9.0",
-    "gulp-jscs": "~2.0.0",
-    "gulp-jshint": "~1.11.2",
-    "gulp-shell": "~0.4.3",
-    "handlebars": "^4.0.2",
-    "jshint": "2.9.2",
-    "jshint-stylish": "~2.0.1",
-    "licensify": "^3.1.0",
-    "timemachine": "~0.2.6",
-    "uglify-js": "^2.6.2",
-    "usertiming": "^0.1.6"
+  "devDependencies": {},
+  "dependencies": {},
+  "bugs": {
+    "url": "https://github.com/flickr/flickr-sdk/issues"
   },
-  "dependencies": {
-    "backo": "^1.1.0",
-    "deepmerge": "^0.2.10",
-    "except": "^0.1.3",
-    "flickr-api-swagger": "2.6.0",
-    "justified-layout": "~1.1.0",
-    "native-promise-only": "^0.8.1",
-    "superagent": "1.8.3"
-  }
+  "homepage": "https://github.com/flickr/flickr-sdk#readme"
 }
