--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "main": "index.js",
   "scripts": {
-    "test": "echo OHAI"
+    "test": "istanbul cover _mocha"
   },
   "repository": {
     "type": "git",
@@ -23,8 +23,15 @@
     "Phil Dokas <pdokas@yahoo-inc.com>"
   ],
   "license": "MIT",
-  "devDependencies": {},
-  "dependencies": {},
+  "devDependencies": {
+    "es6-promise": "~3.3.1",
+    "istanbul": "~0.4.5",
+    "mocha": "~3.0.2",
+    "nock": "~8.0.0"
+  },
+  "dependencies": {
+    "superagent": "~2.2.0"
+  },
   "bugs": {
     "url": "https://github.com/flickr/flickr-sdk/issues"
   },
