--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   ],
   "main": "index.js",
   "scripts": {
+		"lint": "eslint .",
     "test": "istanbul cover _mocha"
   },
   "repository": {
@@ -25,6 +26,8 @@
   "license": "MIT",
   "devDependencies": {
     "es6-promise": "~3.3.1",
+    "eslint": "~2.13.1",
+    "eslint-config-flickr": "~1.3.1",
     "istanbul": "~0.4.5",
     "mocha": "~3.0.2",
     "nock": "~8.0.0"
