--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "eslint": "~2.13.1",
     "eslint-config-flickr": "~1.3.1",
     "istanbul": "~0.4.5",
+    "lolex": "^1.5.1",
     "mocha": "~3.0.2",
     "nock": "~8.0.0",
     "require-dir": "~0.3.1"
   },
   "dependencies": {
+    "deepmerge": "^1.1.1",
     "superagent": "~2.2.0"
   },
   "bugs": {
