Avoid publishing source files

--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "search"
   ],
   "main": "index.js",
+  "files": [
+    "index.js",
+    "request.js"
+  ],
   "scripts": {
     "build": "node script/build > $npm_package_main",
     "lint": "eslint .",
