--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ node_js:
 - '4.0'
 - '0.12'
 - '0.10'
+before_install:
+- export TZ=America/Los_Angeles
 before_script:
 - npm run build
 - npm run lint
