--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "services"
   ],
   "scripts": {
-    "build": "node script/build > $npm_package_main",
+    "build": "node script/build > services/rest.js",
     "lint": "eslint .",
     "test": "istanbul cover _mocha"
   },
