--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "mocha": "~3.0.2",
     "nock": "~8.0.0",
     "require-dir": "~0.3.1",
-    "timemachine": "~0.2.6"
+    "sinon": "~1.17.6"
   },
   "dependencies": {
     "deepmerge": "^1.1.1",
