--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "flickr-sdk",
   "version": "3.0.0",
+  "engines" : {
+    "node" : "4.4.4"
+  },
   "description": "Almost certainly the best Flickr API client in the world for node and the browser",
   "keywords": [
     "flickr",
@@ -21,7 +24,8 @@
     "build": "node script/build > services/rest.js",
     "build-tests": "node script/build-tests",
     "lint": "eslint .",
-    "test": "istanbul cover _mocha"
+    "test": "_mocha",
+    "coverage": "istanbul cover _mocha"
   },
   "repository": {
     "type": "git",
