--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "Phil Dokas <pdokas@yahoo-inc.com>"
   ],
   "license": "MIT",
+  "engines": {
+    "node": ">= 4"
+  },
   "devDependencies": {
     "ejs": "~2.5.2",
-    "es6-promise": "~3.3.1",
     "eslint": "~2.13.1",
     "eslint-config-flickr": "~1.3.1",
     "istanbul": "~0.4.5",
@@ -47,7 +49,7 @@
   },
   "dependencies": {
     "deepmerge": "^1.1.1",
-    "superagent": "~2.2.0"
+    "superagent": "^3.5.2"
   },
   "bugs": {
     "url": "https://github.com/flickr/flickr-sdk/issues"
