--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "build": "node script/build > services/rest.js",
     "build-tests": "node script/build-tests",
     "lint": "eslint .",
-    "test": "_mocha",
-    "coverage": "istanbul cover _mocha"
+    "test": "mocha",
+    "coverage": "nyc mocha"
   },
   "repository": {
     "type": "git",
@@ -41,9 +41,9 @@
     "ejs": "~2.5.2",
     "eslint": "~2.13.1",
     "eslint-config-flickr": "~1.3.1",
-    "istanbul": "~0.4.5",
     "mocha": "~3.0.2",
     "nock": "~8.0.0",
+    "nyc": "^10.3.2",
     "require-dir": "~0.3.1",
     "sinon": "~1.17.6"
   },
