--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
   "engines": {
     "node": ">= 4"
   },
+  "publishConfig": {
+    "tag": "next"
+  },
   "devDependencies": {
     "ejs": "~2.5.2",
     "eslint": "~2.13.1",
