--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flickr-sdk",
-  "version": "3.0.0-alpha.2",
+  "version": "3.0.0-alpha.3",
   "description": "Almost certainly the best Flickr API client in the world for node and the browser",
   "keywords": [
     "flickr",
@@ -43,7 +43,8 @@
     "node": ">= 4"
   },
   "publishConfig": {
-    "tag": "next"
+    "tag": "next",
+    "registry": "https://registry.npmjs.org"
   },
   "devDependencies": {
     "ejs": "~2.5.2",
