--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   },
   "devDependencies": {
     "ejs": "~2.5.2",
-    "eslint": "~2.13.1",
+    "eslint": "^4.2.0",
     "eslint-config-flickr": "~1.3.1",
     "indent-string": "^3.1.0",
     "mocha": "~3.0.2",
