--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "ejs": "~2.5.2",
     "eslint": "^4.2.0",
     "eslint-config-flickr": "~1.3.1",
+    "eslint-plugin-header": "^1.0.0",
     "indent-string": "^3.1.0",
     "mocha": "~3.0.2",
     "nock": "~8.0.0",
