--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "build": "node script/build > services/rest.js",
     "build-tests": "node script/build-tests",
     "lint": "eslint .",
+    "docs": "verb",
     "test": "mocha",
     "coverage": "nyc mocha"
   },
@@ -56,7 +57,9 @@
     "nyc": "^10.3.2",
     "require-dir": "~0.3.1",
     "sinon": "~1.17.6",
-    "stringify-object": "^3.2.0"
+    "stringify-object": "^3.2.0",
+    "verb": "^0.8.10",
+    "verb-cli": "^0.7.4"
   },
   "dependencies": {
     "superagent": "^3.5.3-beta.2"
