--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "mocha": "~3.0.2",
     "nock": "~8.0.0",
     "nyc": "^10.3.2",
+    "ora": "^1.3.0",
     "p-limit": "^1.1.0",
     "require-dir": "~0.3.1",
     "sinon": "~1.17.6",
