--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "registry": "https://registry.npmjs.org"
   },
   "devDependencies": {
+    "chalk": "^2.0.1",
     "ejs": "~2.5.2",
     "eslint": "^4.2.0",
     "eslint-config-flickr": "~1.3.1",
