--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "chalk": "^2.0.1",
+    "dotprune": "^0.1.10",
     "ejs": "~2.5.2",
     "eslint": "^4.2.0",
     "eslint-config-flickr": "~1.3.1",
