--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "stringify-object": "^3.2.0"
   },
   "dependencies": {
-    "superagent": "^3.5.3-beta.2"
+    "superagent": "^3.5.3-beta.2",
+    "xml2js": "^0.4.17"
   },
   "bugs": {
     "url": "https://github.com/flickr/flickr-sdk/issues"
