--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "main": "index.js",
   "files": [
     "index.js",
+    "flickr-sdk.js",
     "lib",
     "plugins",
     "services"
@@ -25,7 +26,8 @@
     "build-rest": "node script/build-rest > services/rest.js",
     "build-tests": "node script/build-tests",
     "build-docs": "node script/build-docs > README.md",
-    "build": "npm run build-rest && npm run build-docs",
+    "build-client": "browserify -s Flickr $npm_package_main > flickr-sdk.js",
+    "build": "npm run build-rest && npm run build-docs && npm run build-client",
     "lint": "eslint .",
     "test": "mocha",
     "coverage": "nyc mocha",
@@ -48,6 +50,7 @@
     "registry": "https://registry.npmjs.org"
   },
   "devDependencies": {
+    "browserify": "^14.4.0",
     "chalk": "^2.0.1",
     "dotprune": "^0.1.10",
     "ejs": "~2.5.2",
