--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "services"
   ],
   "browser": {
+    "./plugins/json.js": "./plugins/json-browser.js",
     "./plugins/oauth.js": "./plugins/oauth-browser.js",
     "./services/oauth.js": "./services/oauth-browser.js"
   },
@@ -61,6 +62,7 @@
     "jsdoc-to-markdown": "^3.0.0",
     "mocha": "~3.0.2",
     "nock": "~8.0.0",
+    "node-http-xhr": "^1.3.4",
     "nyc": "^10.3.2",
     "ora": "^1.3.0",
     "p-limit": "^1.1.0",
