--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "stringify-object": "^3.2.0"
   },
   "dependencies": {
-    "superagent": "^3.5.3-beta.2",
+    "superagent": "^3.8.0",
     "xml2js": "^0.4.17"
   },
   "bugs": {
