--- a/package.json
+++ b/package.json
@@ -50,15 +50,15 @@
     "registry": "https://registry.npmjs.org"
   },
   "devDependencies": {
-    "browserify": "^14.4.0",
-    "chalk": "^2.0.1",
+    "browserify": "^17.0.0",
+    "chalk": "^5.0.0",
     "dotprune": "^0.1.0",
-    "ejs": "~2.5.2",
+    "ejs": "^3.1.6",
     "eslint": "^8.2.0",
     "eslint-config-flickr": "~1.3.1",
     "eslint-plugin-header": "^3.1.1",
-    "indent-string": "^3.1.0",
-    "jsdoc-to-markdown": "^7.1.0",
+    "indent-string": "^5.0.0",
+    "jsdoc-to-markdown": "^7.1.1",
     "mocha": "^9.1.3",
     "nock": "^13.2.0",
     "nyc": "^15.1.0",
@@ -66,7 +66,7 @@
     "p-limit": "^1.1.0",
     "require-dir": "~0.3.1",
     "sinon": "^12.0.1",
-    "stringify-object": "^3.2.0"
+    "stringify-object": "^4.0.0"
   },
   "dependencies": {
     "superagent": "^6.1.0",
