--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "build-tests": "node script/build-tests",
     "build-docs": "node script/build-docs > README.md",
     "build-types": "node script/build-types > flickr-sdk.d.ts",
-    "build-client": "browserify -s Flickr index.js > flickr-sdk.js",
+    "build-client": "browserify -s Flickr $npm_package_main > flickr-sdk.js",
     "build": "npm run build-rest && npm run build-docs && npm run build-types && npm run build-client",
     "lint": "eslint .",
     "test": "mocha",
