Include docs and license in publish
Coulda sworn the readme and license are included by default. oh well

--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "flickr-sdk.js",
     "lib",
     "plugins",
-    "services"
+    "services",
+    "CHANGELOG.md",
+    "LICENSE",
+    "README.md"
   ],
   "browser": {
     "./plugins/oauth.js": "./plugins/oauth-browser.js",
