--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -22,5 +22,6 @@ jobs:
       - name: Install dependencies
         run: npm install
       - run: npm run build
+      - run: npm run tsc
       - run: npm run lint
       - run: npm test
