--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "build-rest": "node script/build-rest > services/rest.js",
     "build-tests": "node script/build-tests",
     "build-docs": "node script/build-docs > README.md",
-    "build-types": "node script/build-types > flickr-sdk.d.ts",
+    "build-types": "node script/build-types > flickr-sdk.d.ts && npm run tsc",
     "build-client": "browserify -s Flickr $npm_package_main > flickr-sdk.js",
     "build": "npm run build-rest && npm run build-docs && npm run build-types && npm run build-client",
+    "tsc": "npx tsc",
     "lint": "eslint .",
     "test": "mocha",
     "coverage": "nyc mocha",
