Remove `jest` dependency

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "build-cjs": "esbuild --bundle --outfile=dist/index.cjs --platform=node --format=cjs src/index.ts",
     "build-esm": "esbuild --bundle --outfile=dist/index.mjs --platform=node --format=esm src/index.ts",
     "build-browser": "esbuild --bundle --outfile=dist/index.js --format=esm src/index.ts",
-    "test": "jest"
+    "test": "node --import tsx --test test/*.ts"
   },
   "repository": {
     "type": "git",
@@ -67,16 +67,14 @@
   },
   "homepage": "https://github.com/flickr/flickr-sdk#readme",
   "devDependencies": {
-    "@jest/globals": "^29.7.0",
     "@types/node": "^20.8.4",
     "esbuild": "^0.19.4",
-    "esbuild-jest": "^0.5.0",
     "flickr-sdk": "file:.",
-    "jest": "^29.7.0",
     "min-qs": "^1.4.0",
     "min-url": "^1.5.0",
     "prettier": "^3.0.3",
     "stringlist-regexp": "^1.0.2",
+    "tsx": "^4.20.3",
     "typescript": "^5.2.2"
   },
   "dependencies": {
