use flinch to test types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,11 @@
       "node"
     ]
   },
-  "include": ["src/**/*"]
+  "include": [
+    "src/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
