--- a/package.json
+++ b/package.json
@@ -40,12 +40,15 @@
   ],
   "scripts": {
     "tsc": "tsc",
-    "build": "npm run tsc && npm run build-cjs && npm run build-esm && npm run build-browser",
+    "build": "tsc && npm run build-cjs && npm run build-esm && npm run build-browser",
     "build-cjs": "esbuild --bundle --outfile=dist/index.cjs --platform=node --format=cjs src/index.ts",
     "build-esm": "esbuild --bundle --outfile=dist/index.mjs --platform=node --format=esm src/index.ts",
     "build-browser": "esbuild --bundle --outfile=dist/index.js --format=esm src/index.ts",
-    "test": "node --import tsx --test test/*.ts"
+    "test": "tsc -p tsconfig.test.json && node --import tsx --test test/*.ts"
   },
+  "workspaces": [
+    "packages/*"
+  ],
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/flickr/flickr-sdk.git"
@@ -69,6 +72,7 @@
   "devDependencies": {
     "@types/node": "^20.8.4",
     "esbuild": "^0.19.4",
+    "@flickr/flinch": "file:./packages/flinch",
     "flickr-sdk": "file:.",
     "min-qs": "^1.4.0",
     "min-url": "^1.5.0",
